@@ -12,6 +12,7 @@ export("ecoslot.S<-")
 export("ecoslot.XY<-")
 export(aue.aggregated_df)
 export(aue.df2image)
+export(aue.dummy2af)
 export(aue.image2df)
 export(aue.phenosimil)
 export(aue.rescale)
@@ -32,6 +33,7 @@ export(eco.fill_ecogen_with_ecopop)
 export(eco.format)
 export(eco.formula)
 export(eco.gsa)
+export(eco.kin.hardy)
 export(eco.kin.loiselle)
 export(eco.lagweight)
 export(eco.listw2ew)
@@ -71,6 +73,7 @@ export(ecogenetics_devel)
 export(ecogenetics_tutorial)
 export(ecopop)
 export(ecopop2genpop)
+export(ecopop_counts2af)
 export(ecoslot.A)
 export(ecoslot.AF)
 export(ecoslot.ALTER)
